Fix quick action overflow

--- a/less/actors.less
+++ b/less/actors.less
@@ -241,6 +241,7 @@
 
       .quick-actions {
         display: flex;
+        flex-wrap: wrap;
         flex-direction: row;
         padding: 0;
         margin: 0;
